--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,40 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <!--Surefire плагин-->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <testFailureIgnore>false</testFailureIgnore>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+                    <properties>
+                        <!--Правила для сбора информации Allure, на которые смотрит aspectj при работе-->
+                        <property>
+                            <name>listener</name>
+                            <value>io.qameta.allure.junit4.AllureJunit4</value>
+                        </property>
+                    </properties>
+                    <systemProperties>
+                        <!--Результаты Allure складываются в отдельную дирректорию в новом формате-->
+                        <property>
+                            <name>allure.results.directory</name>
+                            <value>${project.build.directory}/allure-results</value>
+                        </property>
+                    </systemProperties>
+                </configuration>
+                <!--Зависимость для aspectj-->
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 
@@ -65,9 +99,8 @@
         </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-junit5</artifactId>
-            <version>2.13.1</version>
-            <scope>test</scope>
+            <artifactId>allure-junit4</artifactId>
+            <version>2.6.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -90,7 +123,9 @@
             <artifactId>postgresql</artifactId>
             <version>42.5.1</version>
         </dependency>
-
     </dependencies>
 
+    <properties>
+        <aspectj.version>1.8.10</aspectj.version>
+    </properties>
 </project>
